WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
158886
REGRESSION: Double tap to zoom does not work on yahoo finance
https://bugs.webkit.org/show_bug.cgi?id=158886
Summary
REGRESSION: Double tap to zoom does not work on yahoo finance
Dean Jackson
Reported
2016-06-17 14:10:16 PDT
REGRESSION: Double tap to zoom does not work on yahoo finance
Attachments
Patch
(5.98 KB, patch)
2016-06-17 14:21 PDT
,
Dean Jackson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dean Jackson
Comment 1
2016-06-17 14:10:43 PDT
<
rdar://problem/24917760
>
Dean Jackson
Comment 2
2016-06-17 14:21:08 PDT
Created
attachment 281589
[details]
Patch
Dean Jackson
Comment 3
2016-06-17 14:22:25 PDT
Committed
r202179
: <
http://trac.webkit.org/changeset/202179
>
Alexey Proskuryakov
Comment 4
2016-06-20 10:11:38 PDT
The test passes on open source bots, but either fails or times out 100% of the time on internal ones. I'll have to roll out. Will send links over e-mail.
Alexey Proskuryakov
Comment 5
2016-06-20 10:40:24 PDT
Ugh, can't roll out using webkitbot, and don't have the time for manual rollout right now :(
WebKit Commit Bot
Comment 6
2016-06-20 10:47:32 PDT
Re-opened since this is blocked by
bug 158946
Alexey Proskuryakov
Comment 7
2016-06-20 13:40:42 PDT
Rolled out in
r202239
.
Dean Jackson
Comment 8
2016-06-22 15:52:44 PDT
Committed
r202354
: <
http://trac.webkit.org/changeset/202354
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug