REGRESSION: Double tap to zoom does not work on yahoo finance https://bugs.webkit.org/show_bug.cgi?id=158886 <rdar://problem/24917760>

Reviewed by Simon Fraser.

Source/WebKit2:

We shouldn't enable fast click on pages that have
had to shrink to fit. In other words, we should enable
double-tap-to-zoom if the page has already zoomed.

Test: fast/events/ios/viewport-shrink-to-fit-allows-double-tap.html

* UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView _allowsDoubleTapGestures]):

LayoutTests:

* fast/events/ios/viewport-shrink-to-fit-allows-double-tap-expected.txt: Added.
* fast/events/ios/viewport-shrink-to-fit-allows-double-tap.html: Added.

Canonical link: https://commits.webkit.org/177121@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202354 268f45cc-cd09-0410-ab3c-d52691b4dbfc